# MyECS

./: CMakeLists.txt  README.md
source/: CMakeLists.txt  main.cpp
source/ECS/: CMakeLists.txt
source/ECS/Impl/: Bits_impl.tpp  ComponentManager_impl.tpp  EntityManager_impl.tpp  System_impl.tpp  TypeIdGenerator.cpp
source/ECS/Inc/: Bits.h  ComponentManager.h  ComponentStorage.h  ECS_errorlog.h  Entity.h  EntityManager.h  System.h  TypeIdGenerator.h
